--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <java.version>1.10</java.version>
+	<spark.version>2.8.0</spark.version>
     </properties>
 
     <modules>
