--- a/web/pom.xml
+++ b/web/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.8.0</version>
+            <version>${spark.version}</version>
         </dependency>
 
 
