--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.11.2</version>
+        <version>2018.12.1</version>
     </parent>
 
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.11.2</version>
+            <version>2018.12.1</version>
         </dependency>
 
         <dependency>
@@ -373,8 +373,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Add full screen for pihole
-                        Fix PiHole plugin display issue on size 3x2
+                        Modify dynamic DNS plugin to be a single host per module
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
