--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.12.1</version>
+        <version>2018.12.2</version>
     </parent>
 
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.12.1</version>
+            <version>2018.12.2</version>
         </dependency>
 
         <dependency>
@@ -373,7 +373,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Modify dynamic DNS plugin to be a single host per module
+                        Allow to run the application with a CONFIG environment variabl that will contain the whole app config
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
