--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.12.2</version>
+        <version>2019.01.1</version>
     </parent>
 
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.12.2</version>
+            <version>2019.01.1</version>
         </dependency>
 
         <dependency>
@@ -373,7 +373,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Allow to run the application with a CONFIG environment variabl that will contain the whole app config
+                        Fix issue where full screen plugins with refresh rate of NEVER would actually refresh as fast as possible
+                        Add full screen mode for sonarr plugin to allow to add TV shows
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
