--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 
     <properties>
         <java.version>1.10</java.version>
-	<spark.version>2.8.0</spark.version>
+        <spark.version>2.8.0</spark.version>
+        <spark.template.version>2.7.1</spark.template.version>
     </properties>
 
     <modules>
