make build pull latest appropriate base image to be consistent between ci and local

--- a/web/docker/Dockerfile
+++ b/web/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM openjdk:11.0.4-jre
 
 #Installing virtmanager to be able to use kvm/qemu plugin
 RUN apt-get update && apt-get -y install apt-utils && DEBIAN_FRONTEND=noninteractive apt-get -y install qemu-kvm libvirt-clients libvirt-daemon-system
