--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -107,6 +107,7 @@
                     </configuration>
                     <executions>
                         <execution>
+                            <phase>generate-resources</phase>
                             <goals>
                                 <goal>compile</goal>
                             </goals>
