--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2020.2</version>
+        <version>2020.3</version>
     </parent>
 
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2020.2</version>
+            <version>2020.3</version>
         </dependency>
 
         <dependency>
@@ -369,7 +369,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Fix issues with docker image
+                        Fix issues with Radarr plugin
+                        Change settings menu size on tablets and desktop
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
