fix drone ci file

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,7 @@ steps:
   - name: build
     image: maven:3.6.3
     commands:
-      - mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout > .tags
-      - ech ",latest" >> .tags
+      - echo "latest,$(mvn help:evaluate -Dexpression=project.version -q  -DforceStdout)" > .tags
       - cat .tags
       - mvn clean install
       - mvn clean install -pl web
