--- a/web/pom.xml
+++ b/web/pom.xml
@@ -118,7 +118,11 @@
             <artifactId>lesscss</artifactId>
             <version>1.7.0.1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.12.1</version>
+        </dependency>
         <!-- plugins -->
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
