--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   shared_preferences: '>=0.5.12+4 <2.0.0'
   http: ^0.12.2
   jwt_decoder: ^1.0.4
+  flutter_staggered_grid_view: ^0.3.4
+  web_socket_channel: ^1.2.0
 
 dev_dependencies:
   flutter_test:
