--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   jwt_decoder: ^1.0.4
   flutter_staggered_grid_view: ^0.3.4
   web_socket_channel: ^1.2.0
+  filesize: ^1.0.4
 
 dev_dependencies:
   flutter_test:
