--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: '>=0.5.12+4 <2.0.0'
-  http: ^0.12.2
+  shared_preferences: 0.5.12+4
+  http: ^0.13.0
   jwt_decoder: ^1.0.4
   flutter_staggered_grid_view: ^0.3.4
-  web_socket_channel: ^1.2.0
+  web_socket_channel: ^2.0.0
   filesize: ^1.0.4
+  fl_chart: ^0.12.2
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
