--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,14 +32,20 @@ dependencies:
   http: ^0.13.0
   jwt_decoder: ^1.0.4
   flutter_staggered_grid_view: ^0.3.4
-  web_socket_channel: ^2.0.0
+#  reorderableitemsview: ^1.0.0
+  web_socket_channel: ^1.0.9
   filesize: ^1.0.4
   fl_chart: ^0.12.2
   font_awesome_flutter: ^8.11.0
+  json_annotation: 3.1.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: 1.11.1
+  json_serializable: 3.5.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
