--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   shared_preferences: 0.5.12+4
   http: ^0.13.0
   jwt_decoder: ^1.0.4
-  flutter_staggered_grid_view: ^0.3.4
+  drag_and_drop_gridview: ^1.0.8
 #  reorderableitemsview: ^1.0.0
   web_socket_channel: ^1.0.9
   filesize: ^1.0.4
