remove geting maven version after build (use github tags instead)

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,8 +26,8 @@ steps:
       - mvn clean install  -Dmaven.repo.local=./m2
       - mvn clean install -pl web -Dmaven.repo.local=./m2
       - cp web/target/Homedash-*.jar web/docker/
-      - echo "latest,$(mvn help:evaluate -Dexpression=project.version -q  -DforceStdout -Dmaven.repo.local=./m2)" > .tags
-      - cat .tags
+    #  - echo "latest,$(mvn help:evaluate -Dexpression=project.version -q  -DforceStdout -Dmaven.repo.local=./m2)" > .tags
+    #  - cat .tags
 
 
   - name: rebuild-cache
